--- a/Util/Util.csproj
+++ b/Util/Util.csproj
@@ -136,6 +136,7 @@
     <Compile Include="Process.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Server.cs" />
+    <Compile Include="Service.cs" />
     <Compile Include="TextureUtilities.cs" />
     <Compile Include="UI.cs" />
     <Compile Include="UploadBuffer.cs" />
